--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -9,7 +9,7 @@
   width: min(60%, 100%);
   display: flex;
   justify-content: center;
-  margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 .search-form input {
